# codicel

./: .gitignore  .replit  README.md  package-lock.json  package.json  pyproject.toml  replit.md
backend/: .env.example  analyze.py  ingest.py  main.py  models.py  requirements.txt  test_analyze.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AskArchive.jsx  EvidenceStamp.jsx  Ledger.jsx
