[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "gitpython==3.1.43",
    "httpx==0.27.2",
    "openai==1.51.0",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "uvicorn[standard]==0.30.6",
]
